posiGen_FullsendBox/src/objects/Defect__c.object
<CustomObject>
    <fields>
        <fullName>Contractor_Explanation__c</fullName>
        <label>Contractor Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Corrective_Action_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corrective Action Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corrective_Action_Taken__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corrective Action Taken</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DefectType__c</fullName>
        <label>Defect Type</label>
        <picklist>
            <picklistValues>
                <fullName>Ducts Not Done</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health And Safety Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insulation Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing Air Sealing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing Filters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing Light Bulbs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing Thermostat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operation &amp; Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Code Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Racking &amp; Mounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental Suitability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Damage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aesthetics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer interaction</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <picklist>
            <controllingField>DefectType__c</controllingField>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Layout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modules</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inverter(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>String lengths</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Polarity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wiring Terminations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shading issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error codes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Labels/placards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grounding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disconnect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Breakers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wire/conduit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Junction boxes accessible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment clearances</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rail span</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cantilever</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flashing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connectors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Combiner boxes sealed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exposed conductors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leaks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shingles/roof material</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gutters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Explanation_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Explanation Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fine_assessed__c</fullName>
        <description>Fines assessed for any defect in project found.</description>
        <inlineHelpText>Pick the amount of fine to assess for the defect.</inlineHelpText>
        <label>Fine assessed</label>
        <picklist>
            <picklistValues>
                <fullName>100</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>500</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ops_Defect_Severity__c</fullName>
        <description>Severity Level of the Op.</description>
        <label>Ops Defect Severity</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <formula>Project__r.Record_Type_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipName>Defects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Repaired_By_Field_Tech__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check box if a field tech resolve the deficiency</inlineHelpText>
        <label>Repaired By Field Tech</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subcontractor_Action_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does the Vendor need to resolve this issue.</description>
        <label>Subcontractor Action Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Violation_severity__c</fullName>
        <formula>if( Explanation_Accepted__c = true,0, IF( ISPICKVAL(DefectType__c , &quot;Ducts Not Done&quot;), 1, 0)  +  IF( ISPICKVAL(DefectType__c , &quot;Health And Safety Risk&quot;), 3, 0)+ IF(ISPICKVAL(DefectType__c , &quot;Insulation Incorrect&quot;), 1, 0)+ IF( ISPICKVAL(DefectType__c , &quot;Missing Air Sealing&quot;), 1, 0)+ IF( ISPICKVAL(DefectType__c ,&quot;Missing Filters&quot;), 1, 0)+ IF( ISPICKVAL(DefectType__c ,  &quot;Missing Light Bulbs&quot;), 1, 0)+ IF( ISPICKVAL(DefectType__c , &quot;Missing Thermostat&quot;), 1, 0)+ IF(ISPICKVAL(DefectType__c , &quot;Other&quot;), 1, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculates violation severity. 1 for each violation,3 for health and safety</inlineHelpText>
        <label>Violation severity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Defect</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Project_Type__c</columns>
        <columns>Project__c</columns>
        <columns>DefectType__c</columns>
        <columns>Subcontractor_Action_Needed__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>EE_Defects</fullName>
        <columns>NAME</columns>
        <columns>DefectType__c</columns>
        <columns>Violation_severity__c</columns>
        <columns>Subcontractor_Action_Needed__c</columns>
        <columns>Corrective_Action_Taken__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Defect__c.EE_QC</value>
        </filters>
        <label>EE Defects</label>
    </listViews>
    <listViews>
        <fullName>PV_Install_Defects</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>DefectType__c</columns>
        <columns>Description__c</columns>
        <columns>Ops_Defect_Severity__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Type__c</field>
            <operation>contains</operation>
            <value>install</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Defect__c.PV_Install_QC</value>
        </filters>
        <label>PV Install Defects</label>
    </listViews>
    <nameField>
        <displayFormat>DEF-{00000}</displayFormat>
        <label>Defect ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Defects</pluralLabel>
    <recordTypes>
        <fullName>EE_QC</fullName>
        <active>true</active>
        <label>EE QC</label>
    </recordTypes>
    <recordTypes>
        <fullName>PV_Install_QC</fullName>
        <active>true</active>
        <label>PV Install QC</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>